--- a/admin.html
+++ b/admin.html
@@ -6,202 +6,76 @@
 <title>Beach House Admin</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<style>
-.tab-content { display: none; }
-.tab-content.active { display: block; }
-input[type="date"] { background: transparent; cursor: pointer; border: none; font-weight: bold; }
-</style>
 </head>
-<body class="bg-slate-50 text-slate-900 font-sans min-h-screen">
+<body class="bg-slate-100 font-sans p-8">
 
-<div class="max-w-5xl mx-auto p-4 md:p-8">
-    <header class="flex justify-between items-center mb-8 bg-white p-6 rounded-[2rem] shadow-sm border border-slate-200">
-        <div>
-            <h1 class="text-2xl font-black tracking-tight">BEACH HOUSE <span class="text-blue-600">ADMIN</span></h1>
-            <p id="current-time" class="text-sm font-mono font-bold text-slate-400"></p>
-        </div>
+<div class="max-w-4xl mx-auto">
+    <header class="mb-8">
+        <h1 class="text-3xl font-black italic tracking-tighter">HOST CONTROL</h1>
     </header>
 
-    <nav class="flex space-x-1 mb-8 bg-slate-200/50 p-1 rounded-2xl w-fit">
-        <button class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm bg-white shadow-sm" onclick="openTab(event, 'tab-families')">GUESTS</button>
-        <button class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm text-slate-500" onclick="openTab(event, 'tab-announcements')">PUSH ALERT</button>
-        <button class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm text-slate-500" onclick="openTab(event, 'tab-messages')">CHAT</button>
-        <button class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm text-slate-500" onclick="openTab(event, 'tab-hardware')">DEVICES</button>
-    </nav>
-
-    <main id="tab-families" class="tab-content active space-y-6">
-        <section class="bg-white p-8 rounded-[2rem] border border-slate-200 shadow-sm">
-            <h2 class="font-bold text-lg mb-4">Register New Arrival</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                <input type="text" id="last_name" placeholder="Last Name" class="border p-4 rounded-2xl bg-slate-50 outline-none focus:ring-2 focus:ring-blue-500">
-                <input type="date" id="check_in" class="border p-4 rounded-2xl bg-slate-50">
-                <input type="date" id="check_out" class="border p-4 rounded-2xl bg-slate-50">
-            </div>
-            <button id="create" class="mt-4 bg-blue-600 text-white px-10 py-4 rounded-2xl font-black hover:bg-blue-700 transition">CONFIRM CHECK-IN</button>
-        </section>
-        <div id="family-list" class="space-y-4"></div>
-    </main>
-
-    <main id="tab-announcements" class="tab-content">
-        <div class="max-w-xl bg-white p-8 rounded-[2rem] border shadow-sm mx-auto">
-            <div id="status-card" class="mb-6 p-4 rounded-2xl text-center border-2 border-dashed border-slate-200">
-                <p id="status-text" class="font-mono font-bold uppercase text-slate-400">No active alerts</p>
-            </div>
-            <textarea id="announcement_msg" rows="3" placeholder="Push a message to all visitor tablets..." class="w-full border p-4 rounded-2xl mb-4 bg-slate-50 resize-none"></textarea>
-            <div class="flex items-center justify-between mb-4 px-2">
-                <span class="font-bold text-slate-600">Duration (Minutes)</span>
-                <input type="number" id="duration_mins" value="15" class="w-20 p-2 border rounded-xl text-center font-bold">
-            </div>
-            <button id="send_announcement" class="w-full bg-indigo-600 text-white py-4 rounded-2xl font-black text-lg hover:bg-indigo-700 shadow-lg shadow-indigo-100">PUSH TO DEVICES</button>
-            <button id="clear_announcement" class="w-full text-red-500 font-bold mt-4 hover:underline">Clear Current Alert</button>
+    <section class="bg-white p-8 rounded-[2rem] shadow-sm mb-8">
+        <h2 class="font-bold text-lg mb-4">Register Family</h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
+            <input type="text" id="last_name" placeholder="Last Name (e.g. Miller)" class="border p-4 rounded-2xl outline-none focus:ring-2 focus:ring-blue-600">
+            <input type="date" id="check_in" class="border p-4 rounded-2xl">
+            <input type="date" id="check_out" class="border p-4 rounded-2xl">
         </div>
-    </main>
+        <button id="create-btn" class="w-full bg-blue-600 text-white py-4 rounded-2xl font-black text-lg hover:bg-blue-700 transition">GENERATE STAY & CODE</button>
+    </section>
 
-    <main id="tab-messages" class="tab-content">
-        <div class="bg-white p-6 rounded-[2rem] border min-h-[500px] flex flex-col shadow-sm">
-            <div id="message-list" class="flex-1 overflow-y-auto space-y-3 mb-4 pr-2"></div>
-            <div class="flex gap-2 p-2 bg-slate-50 rounded-2xl border border-slate-200">
-                <input type="text" id="send-msg" placeholder="Select a thread to reply..." class="flex-1 bg-transparent px-4 py-3 outline-none">
-                <button id="send-message" class="bg-green-600 text-white px-8 py-3 rounded-xl font-bold hover:bg-green-700 transition">REPLY</button>
-            </div>
-        </div>
-    </main>
-
-    <main id="tab-hardware" class="tab-content">
-        <div class="bg-slate-900 p-10 rounded-[3rem] text-white shadow-2xl">
-            <h3 class="text-3xl font-black mb-2">Remote Lockdown</h3>
-            <p class="text-slate-400 mb-8">Restrict guest access to tablet features instantly.</p>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                <button id="lock" class="bg-red-600 py-6 rounded-3xl font-black text-lg hover:bg-red-700 transition shadow-xl shadow-red-900/20">🔒 LOCK DEVICES</button>
-                <button id="unlock" class="bg-white/10 py-6 rounded-3xl font-black text-lg hover:bg-white/20 transition">🔓 UNLOCK DEVICES</button>
-            </div>
-        </div>
-    </main>
+    <div id="guest-list" class="space-y-4"></div>
 </div>
 
 <script>
 const SUPABASE_URL = 'https://ofnlpqfscyecatetnuqi.supabase.co';
 const SUPABASE_KEY = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
 const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-let replyToId = null;
 
-function openTab(evt, tabName) {
-    document.querySelectorAll('.tab-content').forEach(t => t.classList.remove('active'));
-    document.querySelectorAll('.tab-btn').forEach(b => { b.classList.remove('bg-white','shadow-sm','text-slate-900'); b.classList.add('text-slate-500'); });
-    document.getElementById(tabName).classList.add('active');
-    evt.currentTarget.classList.add('bg-white','shadow-sm','text-slate-900');
-    evt.currentTarget.classList.remove('text-slate-500');
-}
+function generatePIN() { return Math.floor(100000 + Math.random() * 900000).toString(); }
 
-function updateTime() { document.getElementById('current-time').innerText = new Date().toLocaleTimeString(); }
-setInterval(updateTime, 1000);
-
-// --- DATE LOGIC ---
-function adjustDate(dateStr, days) {
-    const d = new Date(dateStr);
-    d.setDate(d.getDate() + days);
-    return d.toISOString().split('T')[0];
-}
-
-async function updateGuestDate(id, field, val) {
-    await supabaseClient.from('families').update({ [field]: val }).eq('id', id);
-    loadFamilies();
-}
-
-async function loadFamilies() {
-    const { data } = await supabaseClient.from('families').select('*').order('check_in_date', { ascending: true });
-    const list = document.getElementById('family-list');
-    list.innerHTML = '';
-    data?.forEach(f => {
-        const div = document.createElement('div');
-        div.className = "bg-white p-6 rounded-[2rem] border border-slate-200 flex flex-wrap justify-between items-center gap-4 shadow-sm group hover:border-blue-300 transition-colors";
-        div.innerHTML = `
-            <div class="flex-1 min-w-[150px]">
-                <p class="font-black text-xl uppercase tracking-tight">${f.last_name}</p>
-                <p class="text-[10px] text-blue-600 font-bold uppercase tracking-widest">Confirmed Guest</p>
-            </div>
-            <div class="flex gap-6">
-                <div class="text-center">
-                    <p class="text-[9px] font-bold text-slate-400 uppercase tracking-widest mb-1">In</p>
-                    <div class="flex items-center gap-2 bg-slate-50 p-1 rounded-lg">
-                        <button onclick="updateGuestDate('${f.id}','check_in_date',adjustDate('${f.check_in_date}',-1))" class="w-7 h-7 rounded-md bg-white border border-slate-200 shadow-sm font-bold">-</button>
-                        <input type="date" value="${f.check_in_date}" onchange="updateGuestDate('${f.id}','check_in_date',this.value)" class="text-xs">
-                        <button onclick="updateGuestDate('${f.id}','check_in_date',adjustDate('${f.check_in_date}',1))" class="w-7 h-7 rounded-md bg-white border border-slate-200 shadow-sm font-bold">+</button>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <p class="text-[9px] font-bold text-slate-400 uppercase tracking-widest mb-1">Out</p>
-                    <div class="flex items-center gap-2 bg-slate-50 p-1 rounded-lg">
-                        <button onclick="updateGuestDate('${f.id}','check_out_date',adjustDate('${f.check_out_date}',-1))" class="w-7 h-7 rounded-md bg-white border border-slate-200 shadow-sm font-bold">-</button>
-                        <input type="date" value="${f.check_out_date}" onchange="updateGuestDate('${f.id}','check_out_date',this.value)" class="text-xs">
-                        <button onclick="updateGuestDate('${f.id}','check_out_date',adjustDate('${f.check_out_date}',1))" class="w-7 h-7 rounded-md bg-white border border-slate-200 shadow-sm font-bold">+</button>
-                    </div>
-                </div>
-            </div>
-            <button onclick="checkout('${f.id}')" class="bg-red-50 text-red-500 px-6 py-2 rounded-xl text-xs font-bold hover:bg-red-500 hover:text-white transition">CHECKOUT</button>`;
-        list.appendChild(div);
-    });
-}
-
-window.checkout = async (id) => {
-    if(confirm("Complete checkout? This will delete messages for this family.")) {
-        await supabaseClient.from('families').delete().eq('id', id);
-        await supabaseClient.from('messages').delete().eq('family_id', id);
-        loadFamilies();
-    }
-}
-
-document.getElementById('create').onclick = async () => {
+document.getElementById('create-btn').onclick = async () => {
     const ln = document.getElementById('last_name').value;
     const ci = document.getElementById('check_in').value;
     const co = document.getElementById('check_out').value;
-    if(!ln || !ci || !co) return alert("Fill all fields");
-    await supabaseClient.from('families').insert({ last_name: ln, check_in_date: ci, check_out_date: co });
-    document.getElementById('last_name').value = '';
-    loadFamilies();
-};
+    const pin = generatePIN();
 
-async function loadMessages() {
-    const { data } = await supabaseClient.from('messages').select('*, families(last_name)').order('created_at',{ ascending:true });
-    const list = document.getElementById('message-list');
-    list.innerHTML = '';
-    data?.forEach(m => {
-        const isHost = m.sent_by === 'host';
-        const div = document.createElement('div');
-        div.className = `p-4 rounded-2xl cursor-pointer shadow-sm ${isHost ? 'bg-blue-600 text-white ml-12 border-blue-400' : 'bg-white border border-slate-200 mr-12'}`;
-        div.onclick = () => { replyToId = m.family_id; document.getElementById('send-msg').placeholder = `Reply to ${m.families?.last_name}...`; document.getElementById('send-msg').focus(); };
-        div.innerHTML = `<p class="text-[9px] font-bold uppercase tracking-widest mb-1 ${isHost?'text-blue-100':'text-slate-400'}">${isHost ? 'YOU (Host)' : m.families?.last_name}</p><p class="text-sm font-medium">${m.message}</p>`;
-        list.appendChild(div);
+    if(!ln || !ci || !co) return alert("Fill all info!");
+
+    await supabaseClient.from('families').insert({ 
+        last_name: ln, check_in_date: ci, check_out_date: co, access_code: pin 
     });
-    list.scrollTop = list.scrollHeight;
+    
+    document.getElementById('last_name').value = '';
+    alert(`Success! Tell the ${ln} family their code is: ${pin}`);
+    loadGuests();
+};
+
+async function loadGuests() {
+    const { data } = await supabaseClient.from('families').select('*').order('check_in_date', {ascending: true});
+    const list = document.getElementById('guest-list');
+    list.innerHTML = data?.map(f => `
+        <div class="bg-white p-6 rounded-2xl flex justify-between items-center border border-slate-200 shadow-sm">
+            <div>
+                <h3 class="font-black text-xl uppercase">${f.last_name} Family</h3>
+                <p class="text-blue-600 font-mono font-black text-lg">CODE: ${f.access_code}</p>
+            </div>
+            <div class="text-right">
+                <p class="text-xs font-bold text-slate-400 uppercase">${f.check_in_date} to ${f.check_out_date}</p>
+                <button onclick="del('${f.id}')" class="text-red-500 font-bold text-xs mt-2 hover:underline">Delete Guest</button>
+            </div>
+        </div>
+    `).join('') || '';
 }
-setInterval(loadMessages, 5000);
 
-document.getElementById('send-message').onclick = async () => {
-    const msgInput = document.getElementById('send-msg');
-    const msg = msgInput.value.trim();
-    if(!msg || !replyToId) return alert("Select a thread first!");
-    await supabaseClient.from('messages').insert({ family_id: replyToId, message: msg, sent_by: 'host' });
-    msgInput.value = '';
-    loadMessages();
+window.del = async (id) => {
+    if(confirm("Delete this guest?")) {
+        await supabaseClient.from('families').delete().eq('id', id);
+        loadGuests();
+    }
 };
 
-// Announcement & Lock controls
-document.getElementById('send_announcement').onclick = async () => {
-    const msg = document.getElementById('announcement_msg').value;
-    const mins = parseInt(document.getElementById('duration_mins').value);
-    const expiry = new Date(); expiry.setMinutes(expiry.getMinutes() + mins);
-    await supabaseClient.from('announcements').delete().neq('message', 'x');
-    await supabaseClient.from('announcements').insert({ message: msg, expires_at: expiry.toISOString() });
-    document.getElementById('announcement_msg').value = '';
-};
-
-document.getElementById('clear_announcement').onclick = async () => { await supabaseClient.from('announcements').delete().neq('message', 'x'); };
-document.getElementById('lock').onclick = async () => { await supabaseClient.from('tablet_lock').upsert({ id:1, is_locked:true }); };
-document.getElementById('unlock').onclick = async () => { await supabaseClient.from('tablet_lock').upsert({ id:1, is_locked:false }); };
-
-loadFamilies();
-loadMessages();
+loadGuests();
 </script>
 </body>
 </html>
