--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   #login-screen { position:fixed; inset:0; background:#f8fafc; z-index:50; display:flex; flex-direction:column; align-items:center; justify-content:center; }
   .pin-dot { width: 14px; height: 14px; border-radius: 50%; border: 2px solid #cbd5e1; transition: all 0.2s; }
   .pin-dot.filled { background: #2563eb; border-color: #2563eb; transform: scale(1.2); }
-  .keypad-btn { width: 75px; height: 75px; border-radius: 50%; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.05); font-size: 1.5rem; font-weight: 700; transition: all 0.1s; }
+  .keypad-btn { width: 75px; height: 75px; border-radius: 50%; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.05); font-size: 1.5rem; font-weight: 700; transition: all 0.1s; border: 1px solid #e2e8f0; }
   .keypad-btn:active { transform: scale(0.9); background: #f1f5f9; }
 </style>
 </head>
@@ -19,7 +19,7 @@
 <div id="login-screen">
     <div class="text-center mb-10">
         <h1 id="welcome-title" class="text-5xl font-black mb-2 tracking-tighter">Welcome</h1>
-        <p id="instruction-text" class="text-slate-500 font-bold uppercase tracking-widest text-xs">Enter your access code</p>
+        <p id="instruction-text" class="text-slate-500 font-bold uppercase tracking-widest text-xs">Enter your 6-digit access code</p>
     </div>
     
     <div class="flex gap-4 mb-10">
@@ -51,25 +51,17 @@
     <div class="max-w-xl mx-auto p-4 md:p-8">
         <header class="flex justify-between items-end mb-8">
             <h1 class="text-3xl font-black text-slate-900 leading-none tracking-tighter">The Beach House</h1>
-            <p id="current-time" class="text-blue-600 font-bold text-sm"></p>
+            <button onclick="logout()" class="text-[10px] font-bold text-slate-400 border border-slate-300 px-3 py-1 rounded-full">EXIT</button>
         </header>
 
         <main class="space-y-4">
-            <div id="announcement-banner" class="hidden">
-                <div class="bg-indigo-600 text-white p-5 rounded-[2rem] flex items-center gap-4 shadow-lg">
-                    <span class="text-2xl">📢</span>
-                    <p id="announcement-text" class="font-bold leading-tight"></p>
-                </div>
-            </div>
-
             <div class="bg-white p-6 rounded-[2rem] shadow-sm border border-slate-200">
                 <h2 class="text-2xl font-bold mb-1" id="portal-welcome"></h2>
-                <p id="days-left" class="text-slate-400 text-sm font-medium mb-4"></p>
-                <div id="calendar" class="grid grid-cols-7 gap-2 pt-4 border-t border-slate-100"></div>
+                <div id="calendar" class="grid grid-cols-7 gap-2 pt-4 mt-4 border-t border-slate-100"></div>
             </div>
 
             <section class="bg-white p-6 rounded-[2rem] shadow-sm border border-slate-200">
-                <h3 class="font-bold mb-4 px-1">Message Host</h3>
+                <h3 class="font-bold mb-4">Message Host</h3>
                 <div id="message-list" class="max-h-60 overflow-y-auto space-y-3 flex flex-col mb-4 pr-2"></div>
                 <div class="flex gap-2 bg-slate-100 p-2 rounded-2xl">
                     <input type="text" id="guest-msg" class="bg-transparent px-4 py-2 flex-1 outline-none" placeholder="Type here...">
@@ -88,38 +80,35 @@ const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 let currentGuest = null;
 let pinInput = "";
 
-// 1. AUTO-WELCOME LOGIC (Find who is staying here today)
 async function findCurrentGuest() {
     const today = new Date().toISOString().split('T')[0];
-    const { data } = await supabaseClient.from('families')
+    const { data, error } = await supabaseClient.from('families')
         .select('*')
         .lte('check_in_date', today)
         .gte('check_out_date', today)
-        .order('created_at', { ascending: false })
         .limit(1).maybeSingle();
 
     if (data) {
         currentGuest = data;
         document.getElementById('welcome-title').innerText = `Welcome, ${data.last_name}s!`;
+        console.log("Guest Found:", data.last_name);
+    } else {
+        document.getElementById('welcome-title').innerText = "No Guest Today";
     }
 }
 
-// 2. PIN PAD LOGIC
 function pressKey(num) {
     if (pinInput.length < 6) {
         pinInput += num;
         updatePinDisplay();
     }
-    if (pinInput.length === 6) { 
-        setTimeout(submitPin, 200); 
-    }
 }
 
-function clearPin() { 
-    pinInput = ""; 
+function clearPin() {
+    pinInput = "";
     document.getElementById('instruction-text').innerText = "Enter your access code";
-    document.getElementById('instruction-text').classList.remove('text-red-500');
-    updatePinDisplay(); 
+    document.getElementById('instruction-text').style.color = "";
+    updatePinDisplay();
 }
 
 function updatePinDisplay() {
@@ -130,86 +119,52 @@ function updatePinDisplay() {
 }
 
 async function submitPin() {
-    // If input matches the current guest's code
-    if (currentGuest && pinInput === currentGuest.access_code) {
+    if (!currentGuest) {
+        alert("No active reservation found for today in the database.");
+        return;
+    }
+
+    // Crucial: Convert both to strings and trim whitespace
+    const entered = pinInput.trim();
+    const stored = String(currentGuest.access_code).trim();
+
+    if (entered === stored) {
         document.getElementById('login-screen').classList.add('hidden');
         document.getElementById('main-app').classList.remove('hidden');
-        initApp();
+        document.getElementById('portal-welcome').innerText = `${currentGuest.last_name} Residence`;
+        renderCalendar();
+        loadMessages();
     } else {
-        // WRONG CODE LOGIC
         document.getElementById('instruction-text').innerText = "WRONG CODE";
-        document.getElementById('instruction-text').classList.add('text-red-500');
+        document.getElementById('instruction-text').style.color = "red";
         pinInput = "";
-        setTimeout(updatePinDisplay, 300);
+        setTimeout(updatePinDisplay, 400);
     }
 }
 
-// 3. MAIN APP LOGIC
-function initApp() {
-    document.getElementById('portal-welcome').innerText = `${currentGuest.last_name} Residence`;
-    renderCalendar();
-    loadMessages();
-    setInterval(loadMessages, 5000);
-    checkAnnouncements();
-    setInterval(checkAnnouncements, 10000);
-    updateTime();
-    setInterval(updateTime, 1000);
-}
-
-function updateTime() {
-    const now = new Date();
-    document.getElementById('current-time').innerText = now.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'});
-}
+function logout() { location.reload(); }
 
 function renderCalendar() {
-    const today = new Date(); today.setHours(0,0,0,0);
-    const checkin = new Date(currentGuest.check_in_date);
-    const checkout = new Date(currentGuest.check_out_date);
     const calDiv = document.getElementById('calendar');
     calDiv.innerHTML = '';
-
-    const diff = Math.ceil((checkout - today) / (1000*60*60*24));
-    document.getElementById('days-left').innerText = `${diff} nights remaining`;
-
-    for(let d = new Date(checkin); d <= checkout; d.setDate(d.getDate()+1)){
+    const start = new Date(currentGuest.check_in_date);
+    const end = new Date(currentGuest.check_out_date);
+    for(let d = new Date(start); d <= end; d.setDate(d.getDate()+1)){
         const day = document.createElement('div');
-        const dCopy = new Date(d);
-        const isPast = dCopy < today;
-        const isToday = dCopy.toDateString() === today.toDateString();
-        day.className = `aspect-square flex items-center justify-center rounded-xl font-bold text-xs ${isPast ? 'bg-slate-50 text-slate-300 line-through' : isToday ? 'bg-blue-600 text-white shadow-lg' : 'bg-white border border-slate-200 text-slate-600'}`;
+        day.className = "aspect-square flex items-center justify-center rounded-lg border text-xs font-bold";
         day.innerText = d.getDate();
         calDiv.appendChild(day);
     }
 }
 
-async function loadMessages(){
+async function loadMessages() {
     const { data } = await supabaseClient.from('messages').select('*').eq('family_id', currentGuest.id).order('created_at', {ascending:true});
-    const list = document.getElementById('message-list');
-    list.innerHTML = data?.map(m => `
-        <div class="p-3 rounded-2xl text-sm ${m.sent_by==='guest' ? 'bg-blue-600 text-white self-end ml-10':'bg-slate-100 text-slate-700 self-start mr-10 shadow-sm'}">
+    document.getElementById('message-list').innerHTML = data?.map(m => `
+        <div class="p-3 rounded-2xl text-sm ${m.sent_by==='guest'?'bg-blue-600 text-white self-end':'bg-slate-100 self-start'}">
             ${m.message}
         </div>
     `).join('') || '';
-    list.scrollTop = list.scrollHeight;
 }
-
-async function checkAnnouncements() {
-    const { data } = await supabaseClient.from('announcements').select('*').limit(1).maybeSingle();
-    const banner = document.getElementById('announcement-banner');
-    if (data && new Date(data.expires_at) > new Date()) {
-        document.getElementById('announcement-text').innerText = data.message;
-        banner.classList.remove('hidden');
-    } else { banner.classList.add('hidden'); }
-}
-
-document.getElementById('send-guest-msg').onclick = async () => {
-    const msgInput = document.getElementById('guest-msg');
-    const msg = msgInput.value.trim();
-    if(!msg) return;
-    await supabaseClient.from('messages').insert({ family_id: currentGuest.id, message: msg, sent_by: 'guest' });
-    msgInput.value = '';
-    loadMessages();
-};
 
 findCurrentGuest();
 </script>
