--- a/admin.html
+++ b/admin.html
@@ -1,25 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8"><title>Admin Panel</title>
+<meta charset="UTF-8"><title>Beach House Admin</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<style>
+  .tab-content { display: none; }
+  .tab-content.active { display: block; }
+</style>
 </head>
-<body class="bg-slate-100 p-8 font-sans">
-    <div class="max-w-2xl mx-auto space-y-6">
-        <div class="bg-white p-10 rounded-[2.5rem] shadow-sm border border-slate-200">
-            <h1 class="text-3xl font-black mb-8 uppercase tracking-tighter">Register New Guest</h1>
-            <div class="space-y-4">
-                <input type="text" id="ln" placeholder="Guest Last Name" class="w-full border p-4 rounded-2xl outline-none focus:ring-2 focus:ring-blue-500">
-                <div class="flex gap-4">
-                    <input type="date" id="ci" class="flex-1 border p-4 rounded-2xl">
-                    <input type="date" id="co" class="flex-1 border p-4 rounded-2xl">
-                </div>
-                <button id="add" class="w-full bg-blue-600 text-white py-5 rounded-2xl font-black text-lg hover:bg-blue-700 shadow-lg shadow-blue-200 transition">GENERATE STAY & PIN</button>
-            </div>
-        </div>
+<body class="bg-slate-100 p-4 md:p-10 font-sans">
+    <div class="max-w-5xl mx-auto">
+        <header class="flex justify-between items-center mb-8">
+            <h1 class="text-3xl font-black italic tracking-tighter">HOST <span class="text-blue-600">DASHBOARD</span></h1>
+            <div id="lock-indicator" class="px-4 py-2 rounded-full text-[10px] font-black uppercase">System Status</div>
+        </header>
 
-        <div id="list" class="space-y-3"></div>
+        <nav class="flex gap-2 mb-8 bg-slate-200 p-1.5 rounded-2xl w-fit">
+            <button onclick="openTab(event, 'tab-guests')" class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm bg-white shadow-sm">GUESTS</button>
+            <button onclick="openTab(event, 'tab-chat')" class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm text-slate-500">MESSAGES</button>
+            <button onclick="openTab(event, 'tab-push')" class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm text-slate-500">PUSH ALERT</button>
+            <button onclick="openTab(event, 'tab-control')" class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm text-slate-500">HARDWARE</button>
+        </nav>
+
+        <main id="tab-guests" class="tab-content active space-y-6">
+            <section class="bg-white p-8 rounded-3xl border shadow-sm">
+                <h2 class="font-bold text-lg mb-4 uppercase tracking-widest">New Stay Registration</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                    <input type="text" id="ln" placeholder="Last Name" class="border p-4 rounded-2xl outline-none focus:ring-2 focus:ring-blue-500">
+                    <input type="date" id="ci" class="border p-4 rounded-2xl">
+                    <input type="date" id="co" class="border p-4 rounded-2xl">
+                </div>
+                <button id="add-guest" class="mt-4 w-full bg-blue-600 text-white py-4 rounded-2xl font-black text-lg">REGISTER & GENERATE PIN</button>
+            </section>
+            <div id="guest-list" class="space-y-4"></div>
+        </main>
+
+        <main id="tab-chat" class="tab-content">
+            <div class="bg-white rounded-3xl border flex flex-col h-[600px] shadow-sm">
+                <div id="admin-chat-list" class="flex-1 overflow-y-auto p-6 space-y-4"></div>
+                <div class="p-4 border-t flex gap-2">
+                    <input type="text" id="admin-msg" placeholder="Select a message to reply..." class="flex-1 p-4 bg-slate-50 rounded-2xl outline-none border">
+                    <button id="admin-send" class="bg-green-600 text-white px-8 rounded-2xl font-bold">REPLY</button>
+                </div>
+            </div>
+        </main>
+
+        <main id="tab-push" class="tab-content">
+            <div class="max-w-lg mx-auto bg-white p-10 rounded-3xl shadow-sm border text-center">
+                <h2 class="font-black text-2xl mb-2">PUSH ANNOUNCEMENT</h2>
+                <p class="text-slate-400 text-sm mb-6">This banner will appear on all tablets immediately.</p>
+                <textarea id="push-msg" placeholder="e.g. The pool is now open!" class="w-full border p-4 rounded-2xl h-32 mb-4 bg-slate-50"></textarea>
+                <button id="send-push" class="w-full bg-indigo-600 text-white py-4 rounded-2xl font-black">ACTIVATE BANNER</button>
+                <button onclick="clearPush()" class="mt-4 text-red-500 text-xs font-bold uppercase underline">Clear Banner</button>
+            </div>
+        </main>
+
+        <main id="tab-control" class="tab-content">
+            <div class="max-w-lg mx-auto bg-slate-900 text-white p-10 rounded-[3rem] shadow-2xl text-center">
+                <h2 class="text-3xl font-black mb-4 tracking-tighter">REMOTE LOCKDOWN</h2>
+                <p class="text-slate-400 mb-8">Locking prevents any guest interaction with the tablets.</p>
+                <div class="grid grid-cols-2 gap-4">
+                    <button onclick="setLock(true)" class="bg-red-600 py-6 rounded-3xl font-black text-lg shadow-xl">LOCK ALL</button>
+                    <button onclick="setLock(false)" class="bg-white/10 py-6 rounded-3xl font-black text-lg hover:bg-white/20">UNLOCK</button>
+                </div>
+            </div>
+        </main>
     </div>
 
 <script>
@@ -27,54 +73,130 @@ const SUPABASE_URL = 'https://ofnlpqfscyecatetnuqi.supabase.co';
 const SUPABASE_KEY = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
 const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-document.getElementById('add').onclick = async () => {
+let activeReplyFamilyId = null;
+
+function openTab(evt, name) {
+    document.querySelectorAll('.tab-content').forEach(t => t.classList.remove('active'));
+    document.querySelectorAll('.tab-btn').forEach(b => { b.classList.remove('bg-white','shadow-sm','text-slate-900'); b.classList.add('text-slate-500'); });
+    document.getElementById(name).classList.add('active');
+    evt.currentTarget.classList.add('bg-white','shadow-sm','text-slate-900');
+    evt.currentTarget.classList.remove('text-slate-500');
+}
+
+// DATE ADJUSTER HELPERS
+function modDate(dateStr, days) {
+    const d = new Date(dateStr);
+    d.setDate(d.getDate() + days);
+    return d.toISOString().split('T')[0];
+}
+
+async function updateGuestDate(id, field, val) {
+    await supabaseClient.from('families').update({ [field]: val }).eq('id', id);
+    loadGuests();
+}
+
+// GUEST MANAGEMENT
+document.getElementById('add-guest').onclick = async () => {
     const last = document.getElementById('ln').value;
-    const inD = document.getElementById('ci').value;
-    const outD = document.getElementById('co').value;
-    // Generate a clean 6-digit PIN
+    const ci = document.getElementById('ci').value;
+    const co = document.getElementById('co').value;
     const pin = Math.floor(100000 + Math.random() * 900000).toString();
+    if(!last || !ci || !co) return alert("Fill all fields");
 
-    if(!last || !inD || !outD) return alert("Please fill in all guest details.");
-
-    const { error } = await supabaseClient.from('families').insert({
-        last_name: last, 
-        check_in_date: inD, 
-        check_out_date: outD, 
-        access_code: pin
-    });
-
-    if(!error) {
-        alert(`Success! The ${last} family code is: ${pin}`);
-        document.getElementById('ln').value = '';
-        loadGuests();
-    } else { alert("Error: " + error.message); }
+    await supabaseClient.from('families').insert({ last_name: last, check_in_date: ci, check_out_date: co, access_code: pin });
+    document.getElementById('ln').value = '';
+    loadGuests();
 };
 
 async function loadGuests() {
     const { data } = await supabaseClient.from('families').select('*').order('created_at', {ascending:false});
-    const container = document.getElementById('list');
-    container.innerHTML = data?.map(f => `
-        <div class="p-6 bg-white rounded-2xl border border-slate-200 flex justify-between items-center shadow-sm">
+    document.getElementById('guest-list').innerHTML = data?.map(f => `
+        <div class="bg-white p-6 rounded-3xl border flex flex-wrap justify-between items-center shadow-sm">
             <div>
-                <p class="font-black text-xl uppercase tracking-tighter">${f.last_name} FAMILY</p>
+                <p class="font-black text-xl">${f.last_name} Family</p>
                 <p class="text-blue-600 font-mono font-black text-lg">PIN: ${f.access_code}</p>
             </div>
-            <div class="flex flex-col items-end">
-                <p class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">${f.check_in_date} TO ${f.check_out_date}</p>
-                <button onclick="del('${f.id}')" class="text-red-500 font-bold text-xs mt-2 hover:underline">Delete Stay</button>
+            <div class="flex items-center gap-6">
+                <div class="text-center">
+                    <p class="text-[9px] font-bold text-slate-400">CHECK-IN</p>
+                    <div class="flex items-center gap-2 bg-slate-50 p-1 rounded-lg">
+                        <button onclick="updateGuestDate('${f.id}','check_in_date',modDate('${f.check_in_date}',-1))" class="w-6 h-6 bg-white border rounded shadow-sm">-</button>
+                        <span class="text-xs font-bold px-2">${f.check_in_date}</span>
+                        <button onclick="updateGuestDate('${f.id}','check_in_date',modDate('${f.check_in_date}',1))" class="w-6 h-6 bg-white border rounded shadow-sm">+</button>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <p class="text-[9px] font-bold text-slate-400">CHECK-OUT</p>
+                    <div class="flex items-center gap-2 bg-slate-50 p-1 rounded-lg">
+                        <button onclick="updateGuestDate('${f.id}','check_out_date',modDate('${f.check_out_date}',-1))" class="w-6 h-6 bg-white border rounded shadow-sm">-</button>
+                        <span class="text-xs font-bold px-2">${f.check_out_date}</span>
+                        <button onclick="updateGuestDate('${f.id}','check_out_date',modDate('${f.check_out_date}',1))" class="w-6 h-6 bg-white border rounded shadow-sm">+</button>
+                    </div>
+                </div>
+                <button onclick="delGuest('${f.id}')" class="bg-red-50 text-red-500 p-3 rounded-2xl hover:bg-red-500 hover:text-white transition">DELETE</button>
             </div>
         </div>
     `).join('') || '';
 }
 
-window.del = async (id) => {
-    if(confirm("Permanently delete this guest stay?")) {
+window.delGuest = async (id) => {
+    if(confirm("Permanently delete stay?")) {
         await supabaseClient.from('families').delete().eq('id', id);
         loadGuests();
     }
+}
+
+// CHAT MANAGEMENT
+async function loadAdminChat() {
+    const { data } = await supabaseClient.from('messages').select('*, families(last_name)').order('created_at',{ascending:true});
+    document.getElementById('admin-chat-list').innerHTML = data?.map(m => `
+        <div onclick="prepReply('${m.family_id}', '${m.families?.last_name}')" class="p-4 rounded-2xl cursor-pointer max-w-[80%] ${m.sent_by==='host'?'bg-blue-600 text-white ml-auto shadow-md':'bg-slate-100 mr-auto border'}">
+            <p class="text-[9px] font-bold uppercase opacity-60 mb-1">${m.sent_by==='host'?'YOU':m.families?.last_name}</p>
+            <p class="text-sm font-medium">${m.message}</p>
+        </div>
+    `).join('') || '';
+}
+
+function prepReply(id, name) {
+    activeReplyFamilyId = id;
+    document.getElementById('admin-msg').placeholder = `Reply to ${name}...`;
+    document.getElementById('admin-msg').focus();
+}
+
+document.getElementById('admin-send').onclick = async () => {
+    const input = document.getElementById('admin-msg');
+    if(!activeReplyFamilyId || !input.value.trim()) return;
+    await supabaseClient.from('messages').insert({ family_id: activeReplyFamilyId, message: input.value, sent_by: 'host' });
+    input.value = '';
+    loadAdminChat();
 };
 
+// ANNOUNCEMENTS
+document.getElementById('send_push').onclick = async () => {
+    const msg = document.getElementById('push-msg').value;
+    const expiry = new Date(); expiry.setMinutes(expiry.getMinutes() + 30);
+    await supabaseClient.from('announcements').delete().neq('message', '0'); // Clear old
+    await supabaseClient.from('announcements').insert({ message: msg, expires_at: expiry.toISOString() });
+    alert("Banner Pushed!");
+};
+window.clearPush = async () => { await supabaseClient.from('announcements').delete().neq('message', '0'); alert("Banner Cleared"); };
+
+// HARDWARE CONTROL
+window.setLock = async (status) => {
+    await supabaseClient.from('controls').upsert({ id:1, is_locked: status });
+    checkIndicator();
+};
+async function checkIndicator() {
+    const { data } = await supabaseClient.from('controls').select('is_locked').eq('id',1).maybeSingle();
+    const ind = document.getElementById('lock-indicator');
+    ind.innerText = data?.is_locked ? "SYSTEM LOCKED" : "SYSTEM ONLINE";
+    ind.className = `px-4 py-2 rounded-full text-[10px] font-black uppercase ${data?.is_locked ? 'bg-red-100 text-red-600':'bg-green-100 text-green-600'}`;
+}
+
 loadGuests();
+loadAdminChat();
+checkIndicator();
+setInterval(loadAdminChat, 5000);
 </script>
 </body>
 </html>
